--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Background</title>
+    <title>Gardient Background</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
-    <h1>Background Generator</h1>
+    <h1>Cool Generator</h1>
     <input class="color1" type="color" name="color1" value="#00ff00">
     <input class="color2" type="color" name="color1" value="#ff0000">
     <h2>Current CSS Background</h2>
